[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/tilesets/tileset_arena_elements.png" type="Texture" id=1]
[ext_resource path="res://game/arena_elements/StartLights.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[node name="StartLights" type="Node2D"]
modulate = Color( 1, 1, 1, 0.7 )
z_index = 4
script = ExtResource( 2 )

[node name="Light1" type="Sprite" parent="."]
position = Vector2( -24, 0 )
texture = SubResource( 1 )

[node name="Light2" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="Light3" type="Sprite" parent="."]
position = Vector2( 24, 0 )
texture = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
